# rabbitbench

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  docker-compose.yml
.github/workflows/: ci.yml
cli/: Cargo.toml
cli/src/: api.rs  main.rs
cli/src/adapters/: criterion.rs
cli/src/commands/: auth.rs  mod.rs  project.rs  run.rs
server/: .env.example  Cargo.toml
server/benches/: example.rs
server/migrations/: 20241204000001_initial.sql
server/src/: config.rs  main.rs
server/src/auth/: jwt.rs
server/src/db/: models.rs
server/src/db/queries/: benchmarks.rs  mod.rs  projects.rs  reports.rs  users.rs
server/src/graphql/: mod.rs  mutation.rs  query.rs  schema.rs
server/src/graphql/types/: benchmark.rs  metric.rs  mod.rs  project.rs  report.rs  user.rs
server/src/services/: criterion.rs  mod.rs  threshold.rs
web/: package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml
web/e2e/: dashboard.spec.ts  home.spec.ts
web/src/app/: layout.tsx  page.tsx
web/src/app/(auth)/login/: page.tsx
web/src/app/(dashboard)/: layout.tsx
web/src/app/(dashboard)/projects/: page.tsx
web/src/app/(dashboard)/projects/[slug]/: page.tsx
web/src/app/(dashboard)/projects/new/: actions.ts  page.tsx
web/src/components/: benchmark-chart-server.tsx  benchmark-chart.tsx
web/src/components/auth/: login-button.tsx  user-menu.tsx
web/src/lib/: auth.ts
web/src/lib/graphql/: client.ts  mutations.ts  queries.ts
