[package]
name = "rabbitbench"
version.workspace = true
edition.workspace = true

[[bin]]
name = "rabbitbench"
path = "src/main.rs"

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

# CLI
clap = { version = "4", features = ["derive", "env"] }

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# Config
toml = "0.8"
dirs = "5"

# Parsing
regex = "1"
