[package]
name = "rabbitbench-server"
version.workspace = true
edition.workspace = true

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

# Web framework
axum = { version = "0.8", features = ["macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# GraphQL
async-graphql = { version = "7", features = ["chrono", "uuid"] }
async-graphql-axum = "7"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono"] }

# Auth
jsonwebtoken = "9"
sha2 = "0.10"
base64 = "0.22"

# Config
dotenvy = "0.15"

# Parsing
regex = "1"

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "example"
harness = false
